sample push and create
Signed-off-by: Isaac Obella <wizlif@users.noreply.github.com>

--- a/.github/workflows/release-tag-with-push.yml
+++ b/.github/workflows/release-tag-with-push.yml
@@ -1,10 +1,12 @@
-name: Create release tag
+name: Create release tag with push
 
-on: create
+on:
+  push:
+    branches:
+      - 'releases/**'
 
 jobs:
     create-tag:
-        if: ${{ contains(github.ref, 'refs/heads/releases/') }}
         runs-on: ubuntu-latest
         env:
             GITHUB_SHORT_REF: ${{ github.ref_name }}
