--- a/.github/workflows/release-tag-with-push.yml
+++ b/.github/workflows/release-tag-with-push.yml
@@ -18,6 +18,8 @@ jobs:
                 echo "RELEASE_VERSION=$(
                     echo $GITHUB_SHORT_REF | rev | cut -d/ -f1 | rev
                     )" >> $GITHUB_OUTPUT
+            - name: Fetch code from repository
+              uses: actions/checkout@v3
             - name: Create tag
               uses: actions/github-script@v6
               with:
