sample tag pushing again
Signed-off-by: Isaac Obella <wizlif@users.noreply.github.com>

--- a/.github/workflows/new-tag-trigger.yml
+++ b/.github/workflows/new-tag-trigger.yml
@@ -1,9 +1,9 @@
-name: Create release tag with push
+name: Echo release tag
 
 on:
-  create:
+  push:
     tags:
-      - '*'
+      - 'common-v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
     create-tag:
