--- a/.github/workflows/new-tag-trigger.yml
+++ b/.github/workflows/new-tag-trigger.yml
@@ -6,7 +6,7 @@ on:
       - 'common-v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
-    create-tag:
+    echo-tag:
         runs-on: ubuntu-latest
         steps:
             - run:  echo ${{github.ref_name}}
