--- a/.github/workflows/release-tag-with-push.yml
+++ b/.github/workflows/release-tag-with-push.yml
@@ -21,6 +21,7 @@ jobs:
             - name: Create tag
               uses: actions/github-script@v6
               with:
+                github-token: ${{secrets.PAT}}
                 script: |
                     github.rest.git.createRef({
                         owner: context.repo.owner,
