--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -13,6 +13,8 @@ jobs:
         run: echo "Auto Job 1"
 
   job2:
+    if: false
+    needs: [job1]
     name: Job 2
     runs-on: ubuntu-latest
     steps:
