--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,7 +19,7 @@ jobs:
 
           - name: Cleanup
             run: |
-              echo "stuff" > dummy.log
+              touch dummy.log
               git rm --cached dummy.log
               git commit -m "Remove generated files"
               git push
