--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,8 +20,11 @@ jobs:
           - name: create ignored file
             run: touch dummy.log
 
+          - name: Update .gitignore
+            run: |
+              sed -i 's/^*.log/#/g' .gitignore
           - name: Cleanup
             run: |
-              git rm --cached dummy.log
+              git add .
               git commit -m "Remove generated files"
               git push
