--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,11 +20,11 @@ jobs:
           - name: create ignored file
             run: touch dummy.log
 
-          - name: Update .gitignore
-            run: |
-              sed -i 's/^*.log/#/g' .gitignore
+          # - name: Update .gitignore
+          #   run: |
+          #     sed -i 's/^*.log/#/g' .gitignore
           - name: Cleanup
             run: |
-              git add .
+              git add -f dummy.log
               git commit -m "Remove generated files"
               git push
