--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,18 +9,14 @@ jobs:
         steps:
           - name: Checkout code
             uses: actions/checkout@v3
-
+          - run: git fetch --prune --unshallow --tags
           - name: create ignored file
             run: touch dummy.log
 
           - name: Get latest tag
             id: latest_tag
             run: |
-              latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-              echo "Latest tag is $latest_tag"
-              if [ -z "$latest_tag" ]; then
-                latest_tag="v0.0.1"
-              fi
+              latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1) || echo "v0.0.1")
               echo "latest_tag=${latest_tag}" >> $GITHUB_OUTPUT
 
           - name: Increment version
