chore: default to false
Signed-off-by: Isaac Obella <wizlif@users.noreply.github.com>

--- a/.github/actions/echo-value/action.yml
+++ b/.github/actions/echo-value/action.yml
@@ -3,7 +3,7 @@ inputs:
   COOL_BOOLEAN:
     description: "Boolean value to echo"
     type: boolean
-    default: true
+    default: false
 runs:
   using: "composite"
   steps:
